// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NavbarLeft/> renders correctly 1`] = `
<DocumentFragment>
  <nav
    class="navbar navbar-expand navbar-dark bg-primary"
    id="navbar-left"
    role="navigation"
  >
    <div
      class="container-fluid"
    >
      <a
        class="navbar-brand active"
        href="/"
      >
        <div
          class="photo-card card"
        >
          <div
            class="d-none d-lg-block card-body"
          >
            <h5
              class="text-center card-title"
            >
              Arnaud Deprez
            </h5>
            <h6
              class="font-italic text-center text-wrap card-subtitle"
            >
              Technical Architect
            </h6>
          </div>
        </div>
      </a>
      <ul
        class="social-icons mb-3 navbar-nav"
        role=""
      >
        <li
          class="nav-item"
        >
          <a
            aria-label="Rss"
            class="nav-link"
            data-rr-ui-event-key="/rss.xml"
            href="/rss.xml"
            rel="noopener noreferrer"
            target="_blank"
          />
        </li>
      </ul>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`<NavbarLeft/> renders correctly with children 1`] = `
<DocumentFragment>
  <nav
    class="navbar navbar-expand navbar-dark bg-primary"
    id="navbar-left"
    role="navigation"
  >
    <div
      class="container-fluid"
    >
      <a
        class="navbar-brand active"
        href="/"
      >
        <div
          class="photo-card card"
        >
          <div
            class="d-none d-lg-block card-body"
          >
            <h5
              class="text-center card-title"
            >
              Arnaud Deprez
            </h5>
            <h6
              class="font-italic text-center text-wrap card-subtitle"
            >
              Technical Architect
            </h6>
          </div>
        </div>
      </a>
      <ul
        class="social-icons mb-3 navbar-nav"
        role=""
      >
        <li
          class="nav-item"
        >
          <a
            aria-label="Rss"
            class="nav-link"
            data-rr-ui-event-key="/rss.xml"
            href="/rss.xml"
            rel="noopener noreferrer"
            target="_blank"
          />
        </li>
      </ul>
      <ul
        class="navbar-nav"
      >
        <li
          class="nav-item"
        >
          <a
            class="nav-link"
            role="button"
            tabindex="0"
          >
            Menu 1
          </a>
        </li>
        <li
          class="nav-item"
        >
          <a
            class="nav-link"
            role="button"
            tabindex="0"
          >
            Menu 2
          </a>
        </li>
        <li
          class="nav-item"
        >
          <a
            class="nav-link"
            role="button"
            tabindex="0"
          >
            Menu 3
          </a>
        </li>
      </ul>
    </div>
  </nav>
</DocumentFragment>
`;
